# ImageRecognitionDataset

./: .gitignore  CalculateMeanStd.py  ImageDatasets.py  README.md  calculate.py  download.py  main.py  pyproject.toml
CIFAR10/: run.py
CIFAR10/py/: parser.py
CIFAR10/scripts/: download.sh  start.sh
CIFAR100/: run.py
CIFAR100/py/: parser.py
CIFAR100/scripts/: download.sh  start.sh
MNIST/: run.py
MNIST/py/: parser.py
MNIST/scripts/: download.sh  start.sh
caltech101/: randomlist.py  run.py
caltech101/csv/: caltech101_test_subset0.csv  caltech101_test_subset1.csv  caltech101_test_subset2.csv  caltech101_test_subset3.csv  caltech101_test_subset4.csv  caltech101_test_subset5.csv  caltech101_test_subset6.csv  caltech101_test_subset7.csv  caltech101_test_subset8.csv  caltech101_test_subset9.csv  caltech101_train_subset0.csv  caltech101_train_subset1.csv  caltech101_train_subset2.csv  caltech101_train_subset3.csv  caltech101_train_subset4.csv  caltech101_train_subset5.csv  caltech101_train_subset6.csv  caltech101_train_subset7.csv  caltech101_train_subset8.csv  caltech101_train_subset9.csv
caltech101/py/: make_randomlist_caltech101.py  randomlist.py  symblic.py  symblic_caltech101.py
caltech101/scripts/: download.sh  start.sh
caltech256/: randomlist.py  run.py
caltech256/csv/: caltech256_test_subset0.csv  caltech256_test_subset1.csv  caltech256_test_subset2.csv  caltech256_test_subset3.csv  caltech256_test_subset4.csv  caltech256_test_subset5.csv  caltech256_test_subset6.csv  caltech256_test_subset7.csv  caltech256_test_subset8.csv  caltech256_test_subset9.csv  caltech256_train_subset0.csv  caltech256_train_subset1.csv  caltech256_train_subset2.csv  caltech256_train_subset3.csv  caltech256_train_subset4.csv  caltech256_train_subset5.csv  caltech256_train_subset6.csv  caltech256_train_subset7.csv  caltech256_train_subset8.csv  caltech256_train_subset9.csv
caltech256/py/: make_randomlist_caltech256.py  randomlist.py  symblic.py  symblic_caltech256.py
caltech256/scripts/: download.sh  start.sh
config/: datasets.yaml
fashionMNIST/: run.py
fashionMNIST/csv/: class_name.csv
fashionMNIST/py/: parser.py
omniglot/: run.py
src/: CalculateMeanStd.py  ImageDatasets.py  args.py  calculate.py  download.py
(+18 files in other folders)
